# aria

./: .coverage  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
aria/agents/: counterparty_risk.py  market_risk.py  news_analyst.py  orchestrator.py  regulatory_context.py  risk_synthesiser.py
aria/config/: __init__.py  models.py  settings.py
aria/dashboard/: app.py
aria/serving/: api.py
docs/adr/: ADR-001-langgraph-over-crewai.md  ADR-002-chromadb-vector-store.md  ADR-003-sqlite-risk-event-store.md
tests/unit/: test_api.py  test_market_risk.py  test_models.py  test_news_analyst.py  test_orchestrator.py  test_risk_synthesiser.py  test_stub_agents.py
