[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aria"
version = "0.1.0"
description = "Adaptive Risk Intelligence Agent — multi-agent financial risk assessment"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",

    # Agents + LLM
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "openai>=1.30.0",

    # Vector store + RAG
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # Streaming
    "kafka-python>=2.0.2",

    # ML
    "torch>=2.2.0",
    "transformers==4.44.0",
    "scikit-learn>=1.4.0",
    "numpy<2.0",
    "pandas>=2.2.0",
    "yfinance>=0.2.40",

    # Serving
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",

    # Monitoring
    "evidently>=0.4.0",
    "mlflow>=2.13.0",

    # Dashboard
    "plotly>=5.20.0",
    "dash>=2.16.0",
    "dash-bootstrap-components>=1.6.0",

    # Data
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "factory-boy>=3.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aria*"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=aria --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
omit = ["tests/*", "scripts/*", "notebooks/*", "aria/config/settings.py"]